--- a/notebooks/Assignment-1.ipynb
+++ b/notebooks/Assignment-1.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,22 +128,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compound_instrest(amount,duration,rate,compounded):\n",
+    "    simplified1= ((((rate / 100)/4)+1)*amount)\n",
+    "    print(simplified1)\n",
+    "    simplified2=simplified1**(compounded_num(compounded)*duration)\n",
+    "    return simplified2\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-96-9ebcf015aee8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-96-9ebcf015aee8>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    return (((rate / 100)+1)*amount)**(compounded_num(compounded)*duration))\u001b[0m\n\u001b[1;37m                                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1516.125\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.175906439573089e+76"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def compound_instrest(amount,duration,rate,compounded):\n",
-    "    return (((rate / 100)+1)*amount)**(compounded_num(compounded)*duration))\n",
-    " "
+    "compound_instrest(1500,6,4.3,'quarterly')"
    ]
   }
  ],
