--- a/notebooks/Assignment-1.ipynb
+++ b/notebooks/Assignment-1.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,43 +128,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compound_instrest(amount,duration,rate,compounded):\n",
-    "    simplified1= ((((rate / 100)/4)+1)*amount)\n",
-    "    print(simplified1)\n",
-    "    simplified2=simplified1**(compounded_num(compounded)*duration)\n",
-    "    return simplified2\n",
+    "def compound_instrest(p,d,r,c):\n",
+    "    \"\"\"\n",
+    "    P - principal investment amount\n",
+    "    d - number of years the money is invested\n",
+    "    r - the annual interest rate(float)\n",
+    "    c - compounded quarterly,monthly,weekly,daily\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    simplified1= round(((r / 100)/d) + 1,5)\n",
+    "    simplified2 = (compounded_num(c) * d)\n",
+    "\n",
+    "    simplified3=(simplified1 ** simplified2) * p\n",
+    "    \n",
+    "    return simplified3\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1516.125\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2.175906439573089e+76"
+       "9096.98367016145"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compound_instrest(1500,6,4.3,'quarterly')"
+    "compound_instrest(5000,10,5,'monthly')"
    ]
   }
  ],
@@ -184,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
