--- a/notebooks/Assignment-5.ipynb
+++ b/notebooks/Assignment-5.ipynb
@@ -181,11 +181,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scalar "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "import sympy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 3 2]\n",
+      " [2 1 1]\n",
+      " [0 0 0]]\n",
+      "--------------\n",
+      "[[5, 3], [2, 1]]\n",
+      "--------------\n",
+      "[2, 1]\n",
+      "Value of K1,K2 is 1.0 and -1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = np.array([2, 3, 4])\n",
+    "v1 = np.array([5, 6, 8])\n",
+    "v2 = np.array([3, 3, 4])\n",
+    "\n",
+    "r = (np.column_stack((v1,v2,w)))\n",
+    "\n",
+    "\n",
+    "r[1] = np.divide(r[1],3)\n",
+    "\n",
+    "r[2] = np.divide(r[2],3)\n",
+    "\n",
+    "r[2] = np.subtract(r[1],r[2])\n",
+    "\n",
+    "print(r)\n",
+    "l1 = [[*r[0,0:2]], [*r[1,0:2]]]\n",
+    "l2= [r[0,2],r[1,2]]\n",
+    "print(\"--------------\")\n",
+    "print(l1)\n",
+    "print(\"--------------\")\n",
+    "print(l2)\n",
+    "l2 = list(filter(lambda x:x != 0, l2))\n",
+    "ans = np.linalg.solve(l1,l2)\n",
+    "a = np.ceil(ans[0]) \n",
+    "b=np.floor(ans[1])\n",
+    "\n",
+    "print(\"Value of K1,K2 is {0} and {1}\".format(a,b))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w = np.array([2, 3, 4])\n",
+    "v1 = np.array([5, 6, 8])\n",
+    "v2 = np.array([3, 3, 4])\n",
+    "\n",
+    "a=np.column_stack([v1,v2])\n",
+    "b=np.linalg.lstsq(a,w)\n",
+    "\n",
+    "c,d=b[0]\n"
+   ]
   }
  ],
  "metadata": {
